# desafios-tecnicos

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: desafio-3-laravel.yml
desafio-1/: README.md  manipulacao_dados.py  produtos.csv  resultado.json
desafio-1/data/input/: produtos.csv
desafio-1/tests/: test_manipulacao_dados.py
desafio-2/: README.md  compactacao_string.py
desafio-2/tests/: test_compactacao_string.py
desafio-3/: .env.example  README.md  composer.json  phpstan.neon  pint.json
desafio-3/.github/workflows/: ci.yml
desafio-3/app/Http/Controllers/: TaskController.php
desafio-3/app/Http/Requests/: StoreTaskRequest.php
desafio-3/app/Livewire/: TaskManager.php
desafio-3/app/Models/: Task.php
desafio-3/app/Services/: TaskService.php
desafio-3/database/migrations/: 2024_01_01_000000_create_tasks_table.php
desafio-3/database/seeders/: TaskSeeder.php
desafio-3/resources/views/components/: alert.blade.php  button.blade.php  card.blade.php  confirm-modal.blade.php  empty-state.blade.php  input.blade.php  page-header.blade.php  toast.blade.php  validation-error.blade.php
desafio-3/resources/views/components/layouts/: app.blade.php
desafio-3/resources/views/components/task/: form.blade.php  item.blade.php  list.blade.php
desafio-3/resources/views/layouts/: app.blade.php
desafio-3/resources/views/livewire/: task-manager.blade.php
desafio-3/resources/views/tasks/: index.blade.php
desafio-3/routes/: web.php
desafio-3/tests/Feature/: TaskTest.php
desafio-3/tests/Unit/: TaskServiceTest.php
